--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "ConnectionStrings"
+  },
+  "Jwt": {
+    "SecretKey": "KeyCreateByHOAIAN"
   }
 }
