--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "ConnectionStrings"
+  },
+  "Jwt": {
+    "SecretKey": "KeyCreateByHOAIAN"
+  }
 }
