--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "ConnectionStrings"
+    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=password;database=note_app"
   },
   "Jwt": {
     "SecretKey": "KeyCreateByHOAIAN"
